--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <input type="text" placeholder="İsim Soyisim Giriniz">
                 
                 <label>E-mail</label>
-                <input type="text" placeholder="Lütfen E-Mail Giriniz">
+                <input type="text" placeholder=" E-Mail Giriniz">
                 
                 <label>Telefon Numarası</label>
                 <input type="number" id="" name="" placeholder="0-123-456-78-90" pattern="[0]{1}-[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}">
