--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
                         bir programlama dilidir. Girintilere dayalı 
                         basit söz dizimi, dilin öğrenilmesini ve akılda
                          kalmasını kolaylaştırır. 
+                            Python, nesne yönelimli, yorumlamalı, 
+                        birimsel ve etkileşimli yüksek seviyeli 
+                        bir programlama dilidir. Girintilere dayalı 
+                        basit söz dizimi, dilin öğrenilmesini ve akılda
+                         kalmasını kolaylaştırır. 
+                            Python, nesne yönelimli, yorumlamalı, 
+                        birimsel ve etkileşimli yüksek seviyeli 
+                        bir programlama dilidir. Girintilere dayalı 
+                        basit söz dizimi, dilin öğrenilmesini ve akılda
+                         kalmasını kolaylaştırır. 
                         </p>
 
                     </div>
